tests/baselines/reference/parserIndexSignature10(strict=true).errors.txt
parserIndexSignature10.ts(2,5): error TS1096: An index signature must have exactly one parameter.
parserIndexSignature10.ts(2,5): error TS7006: Parameter 'a' implicitly has an 'any' type.
parserIndexSignature10.ts(2,8): error TS7006: Parameter 'b' implicitly has an 'any' type.


==== parserIndexSignature10.ts (3 errors) ====
    interface I {
       [a, b]: number
        ~
!!! error TS1096: An index signature must have exactly one parameter.
        ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
           ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
    }